# cmd/http-service/pbgen/oas/openapi-spec.swagger.json
@@ -627,6 +627,11 @@
           "additionalProperties": {},
           "description": "The config of the TiFlash component. JSON format."
         },
+        "learner_config": {
+          "type": "object",
+          "additionalProperties": {},
+          "description": "The TiFlash learner config of the TiFlash component. JSON format."
+        },
         "members": {
           "type": "array",
           "items": {
